P3/ejudge_contests/02/var/archive/xmlreports/0/0/1/000037
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="37" judge-id="9" status="CE" scoring="ACM" run-tests="0" contest-id="302" compile-error="yes" >
  <uuid>06cc50da-d392-4877-9543-e8848a802b49</uuid>
  <compiler_output>000037.cpp: In function 'int main()':
000037.cpp:15:2: error: 'table' was not declared in this scope
  table[0]=1; table[1]=1;
  ^~~~~
000037.cpp:22:4: error: 'ans' was not declared in this scope
    ans.push_back(table[i]);
    ^~~
000037.cpp:38:13: error: 'ans' was not declared in this scope
  for (int i=ans.size()-1;i&gt;0-1;i--){
             ^~~
</compiler_output>
</testing-report>
